# vault-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/vault_mcp/: auth.py  chunker.py  indexer.py  models.py  parser.py  server.py
