[project]
name = "vault-mcp-server"
version = "0.1.0"
description = "MCP server for personal Markdown knowledge vault — semantic search, metadata parsing, structured queries"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0,<1.0",
    "sentence-transformers>=3.0.0",
    "watchfiles>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_mcp"]
